# Tetris-PPO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  requirements.txt  setup.py  setup.sh  test.py  training.csv
header/: log.hpp
header/app/: App.hpp  AppContext.hpp  Graphics.hpp  KeyBindings.hpp  ResourceManager.hpp  Screen.hpp  SdlHelper.hpp
header/app/Screens/: AISettings.hpp  ComponentBases.hpp  ControlSettings.hpp  GameInfomation.hpp  LocalMultiPlayer.hpp  MainMenu.hpp  Player1ControlSettings.hpp  Player2ControlSettings.hpp  ResetData.hpp  Screen.hpp  ScreenFactory.hpp  Settings.hpp  SinglePlayer.hpp  VersusAI.hpp  VolumeSettings.hpp
header/app/WindowComponents/: Animation.hpp  Button.hpp  Component.hpp  Image.hpp  Label.hpp  Line.hpp  PlayerTetrisBoardDisplay.hpp  Slider.hpp  TetrisBoardDisplay.hpp  TextField.hpp  WindowComponents.hpp
header/engine/: Board.hpp  TetrisEngine.hpp  Tetromino.hpp  engine.hpp
src/: CMakeLists.txt  binder.cpp  log.cpp  main.cpp
src/app/: App.cpp  Graphics.cpp  KeyBindings.cpp  ResourceManager.cpp  Screen.cpp  SdlHelper.cpp
src/app/Screens/: AISettings.cpp  ComponentBases.cpp  ControlSettings.cpp  GameInfomation.cpp  LocalMultiPlayer.cpp  MainMenu.cpp  Player1ControlSettings.cpp  Player2ControlSettings.cpp  ResetData.cpp  Screen.cpp  ScreenFactory.cpp  Settings.cpp  SinglePlayer.cpp  VersusAI.cpp  VolumeSettings.cpp
src/app/WindowComponents/: Animation.cpp  Button.cpp  Image.cpp  Label.cpp  Line.cpp  PlayerTetrisBoardDisplay.cpp  Slider.cpp  TetrisBoardDisplay.cpp  TextField.cpp
src/engine/: Board.cpp  TetrisEngine.cpp  Tetromino.cpp
src/ppo/: PPO.py  Test.py  Tetris.py  Timing.py  Train.py  Trainer.py  TrajectoryCollector.py  Visualisation.py
